discord_themes/addons/alky_CV_addons.css
/* ... */
[aria-label="bad"] .emojiSad-3LNJSS:hover,
[aria-label="neutral"] .emojiNeutral-2bmgFi:hover,
[aria-label="good"] .emojiHappy-1XST7V:hover{
    transform: none;
}
[aria-label="bad"] .emojiSad-3LNJSS:hover:after,
[aria-label="neutral"] .emojiNeutral-2bmgFi:hover:after,
[aria-label="good"] .emojiHappy-1XST7V:hover:after{
    color: var(--hover-color);
}
[aria-label="bad"] .emojiSad-3LNJSS:after{
    content: "Below Average";
}
[aria-label="neutral"] .emojiNeutral-2bmgFi:after{
    content: "Average";
    position: relative;
    top: 10px;
}
[aria-label="good"] .emojiHappy-1XST7V:after{
    content: "Above Average";
}
/*-----CONNECT XBOX POPOUT-----*/
.artContainer--HGfkf.reconnectArtContainer-PgMt-F,
.art-9T0Zyd.reconnectArt-IKJMqx,
.artContainer--HGfkf.connectArtContainer-2azUUc,
.art-9T0Zyd.connectArt-W4JF0C{
    height: 0;
}
.artContainer--HGfkf.connectArtContainer-2azUUc~div button:first-child .contents-3ca1mk,
.artContainer--HGfkf.reconnectArtContainer-PgMt-F~div button:first-child .contents-3ca1mk{
    text-indent: -83px;
}
.artContainer--HGfkf.connectArtContainer-2azUUc~div button:first-child .contents-3ca1mk:after,
.artContainer--HGfkf.reconnectArtContainer-PgMt-F~div button:first-child .contents-3ca1mk:after{
    content: "Do not connect";
}
.upsellTooltipWrapper-1wqikQ.caretBottomCenter-4XccL3:after{
    border-top-color: var(--main-color);
}
/*-----PROFILE PANEL IN DM'S-----*/
#app-mount aside.profilePanel-2PWEok{
    --banner-height: 60px;
}
#app-mount aside.profilePanel-2PWEok .bannerSVGWrapper-qc0szY foreignObject{
    height: var(--banner-height);
}
#app-mount aside.profilePanel-2PWEok .avatarPositionPanel-3P4Ted{
    top: calc(72px - var(--banner-height));
}
#app-mount aside.profilePanel-2PWEok .bannerSVGWrapper-qc0szY circle{
    display: none;
}
#app-mount aside.profilePanel-2PWEok .avatarHoverTarget-l77PhT .wrapper-1VLyxH{
    top: calc(var(--avatar-extended-bg) - (var(--rs-medium-width, 0px) + var(--rs-medium-spacing, 0px)));
    left: calc(var(--avatar-extended-bg) - (var(--rs-medium-width, 0px) + var(--rs-medium-spacing, 0px)));
}
#app-mount aside.profilePanel-2PWEok .avatarHoverTarget-l77PhT .wrapper-1VLyxH,
#app-mount aside.profilePanel-2PWEok .avatarHoverTarget-l77PhT .wrapper-1VLyxH svg{
    width: calc(var(--profile-popout-picture-size, 80px)) !important;
    height: calc(var(--profile-popout-picture-size, 80px)) !important;
}
#app-mount aside.profilePanel-2PWEok .avatarHoverTarget-l77PhT .wrapper-1VLyxH svg foreignObject{
    width: 92px;
    height: 92px
}
/*-----CREDIT CARD INFO-----*/
.input-2g-os5[placeholder="Coolsville"]::placeholder,
.input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE,
.input-2g-os5[placeholder="MM/YY"]+div .text-xs-normal-3SiVjE{
    text-indent: -99999px;
}
.input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE:after,
.input-2g-os5[placeholder="MM/YY"]+div .text-xs-normal-3SiVjE:after{
    text-indent: 0;
    display: block;
}
.input-2g-os5[placeholder="123 Discord Drive"]+div .text-xs-normal-3SiVjE:after{
    content: "Address is required";
}
.input-2g-os5[placeholder="MM/YY"]+div .text-xs-normal-3SiVjE:after{
    content: "Expiration date invalid";
}
/*edited Discord marketing shit to be less stupid*/
.colorPremiumTier2-3R4qYN{
    background-color: rgb(0,0,0,0.4);
    background-image: none;
    border: 3px solid var(--main-color);
    border-radius: 7.5px;
    width: 95%;
    margin: auto;
}
.upsellContainer-22N_CL{
    background: rgb(0,0,0,0.6);
    border: 2px solid var(--main-color);
    border-radius: 12px;
    /*affects stickers tab in server settings. not sure what else*/
}

/*random tutorial arrows*/
.tutorial-1iwync .arrowGroup-25Wc10 .arrowContainer-27wMq6 img.arrowIcon-3Q91hj {
    display: none;
    /*removes tutorial arrow thingies when searching for server, channels or dm*/
}

.wumpusWrapper-3jyMw-{
    display: none;
    /*die wumpus*/
}
/*stupid discord art removal*/
.art-3-BV8m,
/*Screen Share modal*/
.art-1TvEXv,
/*stupid xbox marketing crap*/
.art-1HoEkU,
/*NEW! Text chat in voice! art thingy*/
.fullWidthImage-pvnyWO{
    display: none;
}
.artContainer-1yaXct.artContainerBoxShadow-2PjEg_{
    min-height: 40px;
    /*adjustment for removing discord art crap*/
}

.iconBadge-1D5-9X.baseShapeRound-3epLEv[style*="background-color: hsl(270, calc(var(--saturation-factor, 1) * 86.7%), 70.6%)"]{
    background-color: rgb(var(--main-color-numerical),0.25) !important;
    /*sets purple icon badge when too many servers to be correct color*/
}
.ownerIcon-255uKo.icon-1dGlZy{
    top: -2.5px;
    /*owner icon in member list*/
}

.artwork-3uFrhF{
    display: none;
}

/*improved bg of thing in screen share modal*/
.gradientBackground-MytxDL{
    background-image: none;
    background-color: rgb(var(--main-color-numerical),0.7);
} 
/*voice connection popout*/
.button-1EGGcP.buttonColor-3bP3fX.buttonActive-Uc1jHx{
    background: #000;
}
.button-1EGGcP.buttonColor-3bP3fX.buttonActive-Uc1jHx:hover{
    background-color: rgba(0,0,0,.95);
}

/*thread dropdown body stars*/
.stars-3UP9-A{
    display: none;
}

/*flower things*/
.gameVerifiedIcon-1YMUdQ svg{
    background: var(--main-color);
    border-radius: 50%;
    /*verified game icon*/
}
.flowerStarContainer-1QeD-L{
    border-radius: 50%;
    background-color: var(--main-color);
}
.flowerStar-2tNFCR[aria-label="verified" i]{
    stroke: none;
}

/*failed friend req modal*/
.focusLock-2tveLW[aria-label="Friend request failed"] .text-md-normal-304U3g{
    color: transparent;
}
.focusLock-2tveLW[aria-label="Friend request failed"] .text-md-normal-304U3g:before{
    content: "User not found. If spelling, capitalization, and discriminator is correct, it is probable that the user has blocked you or has prevented certain friend requests in settings.";
    color: var(--text-normal);
}

.shelfTopBackground-R55ED9[alt="characters playing a game"]{
    display: none;
}
.activityItem-1Z9CTr:hover .activitySubtitleText-r0WHTk{
    filter: invert(1);
}
/* ... */

